examples/test/testpolicy6287.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6287
  namespace: namespace290
spec:
  podSelector:
    matchLabels:
      key9: value43
      key5: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value46
          key42: value40
          key12: value9
      podSelector:
        matchLabels:
          key14: value41
          key23: value16
          key6: value35
